add user Blueprint, fix jwt token

--- a/backend/app/templates/createUser.html
+++ b/backend/app/templates/createUser.html
@@ -19,6 +19,8 @@
             <input type="password" name="password" id="password" required>
             <label for="email">Email</label>
             <input type="email" name="email" id="email" required>
+	    <label for="is_admin">Is Admin</label>
+	    <input type="checkbox" name="is_admin">
             <button type="submit">Create User</button>
         </form>
     </div>
