--- a/backend/app/templates/list.html
+++ b/backend/app/templates/list.html
@@ -9,6 +9,7 @@
                 <th>Usuario: </th>
                 <th>Contraseña: </th>
                 <th>Email: </th>
+                <th>Is Admin: </th>
             </thead>
         </tr>
         <tbody>
@@ -17,6 +18,7 @@
                 <td>{{ user.username }}</td>
                 <td>{{ user.password }}</td>
                 <td>{{ user.email }}</td>
+                <td>{{ user.is_admin }}</td>
                 <td><a href="{{ url_for('delete_user', id=user.id) }}">Eliminar</a></td>
             <tr>
             {% endfor %}
